--- a/sign.html
+++ b/sign.html
@@ -133,7 +133,7 @@
             By signing up, you agree to our Terms, Privacy Policy and Cookies Policy.
         </p>
 
-        <a href="profile.html"><button class="signup-btn">Sign Up</button></a>
+        <a href="testy.html"><button class="signup-btn">Sign Up</button></a>
     </div>
 
     <!-- LOGIN BOX -->
