--- a/profileproduct.html
+++ b/profileproduct.html
@@ -1,2 +1,149 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>One Page Portfolio</title>
+
+<style>
+/* ----------- BASIC ----------- */
+body{
+    margin:0;
+    font-family: Arial, sans-serif;
+    scroll-behavior: smooth;
+}
+header{
+    width:100%;
+    background:#111;
+    padding:15px 0;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:1000;
+}
+nav ul{
+    list-style:none;
+    display:flex;
+    justify-content:center;
+    gap:30px;
+    margin:0;
+    padding:0;
+}
+nav ul li a{
+    text-decoration:none;
+    color:#fff;
+    font-size:18px;
+    transition:.3s;
+}
+nav ul li a:hover{
+    color:#0f0;
+}
+
+/* ----------- SECTION ----------- */
+section{
+    padding:80px 20px;
+    min-height:100vh;
+}
+#home{
+    background:#f5f5f5;
+    padding-top:120px;
+    text-align:center;
+}
+#about{
+    background:#ffffff;
+}
+#portfolios{
+    background:#f0f0f0;
+}
+#contact{
+    background:#ffffff;
+}
+
+/* ----------- PORTFOLIO CARDS ----------- */
+.portfolio-container{
+    display:flex;
+    flex-wrap:wrap;
+    gap:20px;
+}
+.card{
+    width:250px;
+    border:1px solid #ccc;
+    border-radius:8px;
+    padding:10px;
+    background:#fff;
+    transition:.3s;
+}
+.card:hover{
+    box-shadow:0 0 10px rgba(0,0,0,0.3);
+    transform:translateY(-5px);
+}
+.card img{
+    width:100%;
+    height:150px;
+    object-fit:cover;
+    border-radius:5px;
+}
+</style>
+</head>
+
+<body>
+
+<!-- NAVBAR -->
+<header>
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#portfolios">Portfolios</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- HOME -->
+<section id="home">
+  <h1>Welcome to My Portfolio</h1>
+  <p>A simple one-page smooth scroll website</p>
+</section>
+
+<!-- ABOUT -->
+<section id="about">
+  <h2>About Me</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed.</p>
+</section>
+
+<!-- PORTFOLIO -->
+<section id="portfolios">
+  <h2>My Works</h2>
+
+  <div class="portfolio-container">
+    <div class="card">
+      <img src="https://via.placeholder.com/250x150" alt="">
+      <h3>Project 1</h3>
+      <p>Short description of your project.</p>
+    </div>
+
+    <div class="card">
+      <img src="https://via.placeholder.com/250x150" alt="">
+      <h3>Project 2</h3>
+      <p>Short description of your project.</p>
+    </div>
+
+    <div class="card">
+      <img src="https://via.placeholder.com/250x150" alt="">
+      <h3>Project 3</h3>
+      <p>Short description of your project.</p>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: yourmail@gmail.com</p>
+</section>
+
+</body>
+</html>
 
 
