--- a/testy.html
+++ b/testy.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Product Add</title>
+<title>frofile</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"/>
 <style>
 #fileInput { display:none; }
@@ -80,7 +80,7 @@
 .big-image { 
     width:100%; 
     height:200px; 
-    object-fit:unset; 
+   object-fit: cover; 
     margin-bottom:10px; 
 }
 .small-images { 
@@ -218,7 +218,7 @@ display:flex; flex-wrap:wrap;  border:px solid red;
 /* Large PC */
 @media (min-width: 901px) {
     .product-card {
-        width: 10%;
+        width: 30%;
     }
     .header {
         max-width: 100%;
@@ -227,11 +227,20 @@ display:flex; flex-wrap:wrap;  border:px solid red;
  .btn-pa1{
     margin: auto;
  }
+ 
+
+}
+.product-card{
+    position: relative;
+}
+.back{
+    width:80px;height:30px;
+    border:1px solid black;background-color: #888;
 }
 </style>
 </head>
 <body>
-    <a href="index.html">home</a>
+    <a href="index.html"><button class="back">← Back</button> </a>
 <div class="header" style="margin: auto; max-width:300px; border:px solid red;">
 
 <div class="profileone" style="position:relative;">
@@ -250,7 +259,9 @@ display:flex; flex-wrap:wrap;  border:px solid red;
 
 
 <input type="text" id="userName" placeholder="Enter your name"><br><br>
-<a href="https://wa.me/8801319992654"><button class="btn-pa1">Message</button"></a>
+<a href="https://wa.me/8801319992654">
+    <button class="btn-pa1">Message</button>
+</a>
 
 
    
@@ -275,33 +286,55 @@ display:flex; flex-wrap:wrap;  border:px solid red;
     <button class="btn-pa" onclick="addProduct()">Add Product</button>
 </div>
 
-
-<a href="Updated product-details.html"><div id="productList"></div></a>
+<h3>your product</h3>
+<div id="productList"></div>
 
 <script>
 let products = JSON.parse(localStorage.getItem('products')) || [];
 const fileInput = document.getElementById("fileInput");
 
+/* ================= LOAD PRODUCTS ================= */
 function loadProducts() {
     const productList = document.getElementById("productList");
     productList.innerHTML = '';
-    
+
     products.forEach((product, index) => {
         productList.innerHTML += `
-        <div class="product-card" onclick='openDetails(${index})'>
-            <img class="big-image" src="${product.main}">
+        <div class="product-card" style="position:relative;">
+
+            <button onclick="deleteProduct(${index})" style="
+                background:red;
+                color:white;
+                border:none;
+                padding:5px 8px;
+                position:absolute;
+                top:5px;
+                right:5px;
+                cursor:pointer;
+                border-radius:4px;
+            ">Delete</button>
+
+            <img class="big-image" src="${product.main}" onclick="openDetails(${index})">
+
             <div class="small-images">
-                ${product.imgs.map(img => `<img src="${img}">`).join('')}
+                ${product.imgs.length > 0 
+                  ? product.imgs.map(img => `<img src="${img}">`).join('')
+                  : ''
+                }
             </div>
+
             <h3>${product.name}</h3>
             <p>Price: ${product.price} TK</p>
+
         </div>
         `;
     });
 }
 
+/* ================= IMAGE UPLOAD ================= */
 fileInput.addEventListener("change", function(){
     const files = this.files;
+
     for(let file of files){
         if(!file.type.startsWith('image/')) continue;
 
@@ -313,26 +346,38 @@ fileInput.addEventListener("change", function(){
                 break;
             }
         }
-        if(!emptyBox){ alert("Maximum 4 images allowed!"); break; }
+
+        if(!emptyBox){
+            alert("Maximum 4 images allowed!");
+            break;
+        }
 
         const reader = new FileReader();
         reader.onload = function(e){
             emptyBox.innerHTML = `<img src="${e.target.result}"><span class="remove-btn">×</span>`;
             emptyBox.classList.add("has-img");
+
             emptyBox.querySelector(".remove-btn").onclick = function(){
-                emptyBox.innerHTML = "Box "+emptyBox.id.replace("box","");
+                emptyBox.innerHTML = "Box " + emptyBox.id.replace("box","");
                 emptyBox.classList.remove("has-img");
             };
         };
+
         reader.readAsDataURL(file);
     }
+
     this.value = "";
 });
 
+/* ================= ADD PRODUCT ================= */
 function addProduct(){
     let name = document.getElementById("pName").value.trim();
     let price = document.getElementById("pPrice").value.trim();
-    if(!name || !price){ alert("Please enter Name and Price!"); return; }
+
+    if(!name || !price){
+        alert("Please enter Name and Price!");
+        return;
+    }
 
     let images = [];
     for(let i=1;i<=4;i++){
@@ -341,46 +386,64 @@ function addProduct(){
             images.push(box.querySelector("img").src);
         }
     }
-    if(images.length===0){ alert("Please add at least 1 image!"); return; }
 
-    let productData = { name, price, main: images[0], imgs: images.slice(1), description: "Best product description" };
+    if(images.length === 0){
+        alert("Please add at least 1 image!");
+        return;
+    }
+
+    let productData = {
+        name,
+        price,
+        main: images[0],
+        imgs: images.slice(1),
+        description: "Best product description"
+    };
+
     products.push(productData);
     localStorage.setItem('products', JSON.stringify(products));
     loadProducts();
 
     document.getElementById("pName").value = "";
     document.getElementById("pPrice").value = "";
+
     for(let i=1;i<=4;i++){
         let box = document.getElementById("box"+i);
-        box.innerHTML = "Box "+i;
+        box.innerHTML = "Box " + i;
         box.classList.remove("has-img");
     }
 }
 
+/* ================= DELETE PRODUCT ================= */
+function deleteProduct(index){
+    if(confirm("Are you sure you want to delete this product?")){
+        products.splice(index, 1);
+        localStorage.setItem("products", JSON.stringify(products));
+        loadProducts();
+    }
+}
+
+/* ================= OPEN DETAILS ================= */
 function openDetails(index){
     localStorage.setItem("selectedProductIndex", index);
     window.location.href = "product-details.html";
 }
 
-// Initial load
-loadProducts();
-</script>
-<script>
-// Load stored profile image + name
+/* ================= PROFILE IMAGE + NAME ================= */
 window.onload = function() {
+    loadProducts();
+
     let savedImg = localStorage.getItem("userProfileImage");
     let savedName = localStorage.getItem("userName");
 
     if(savedImg){
         document.getElementById("profilePreview").src = savedImg;
     }
-
     if(savedName){
         document.getElementById("userName").value = savedName;
     }
 };
-
-// Open file input when profile box or camera clicked
+/* Profile image select */        
 document.getElementById("profilePreview").onclick = function(){
     document.getElementById("profile").click();
 };
@@ -388,7 +451,7 @@ document.getElementById("cameraIcon").onclick = function(){
     document.getElementById("profile").click();
 };
 
-// When user selects image
+/* Save profile image */
 document.getElementById("profile").addEventListener("change", function(){
     const file = this.files[0];
     if(!file) return;
@@ -397,18 +460,17 @@ document.getElementById("profile").addEventListener("change", function(){
     reader.onload = function(e){
         let imgURL = e.target.result;
         document.getElementById("profilePreview").src = imgURL;
-
-        // Save to localStorage
         localStorage.setItem("userProfileImage", imgURL);
     };
     reader.readAsDataURL(file);
 });
 
-// Save Name live
+/* Save Name Live */
 document.getElementById("userName").addEventListener("input", function(){
     localStorage.setItem("userName", this.value);
 });
 </script>
+
 
 
 </body>
