--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ margin: auto;
         <a href="index.html"><div class="soman1" style="display:flex; justify-content: center;"><p class="names" style=""><img src="logo.png" class="logo"> </p> </div></a>
        <a href="testy.html"><div class="soman" style="display: flex;"><i class="fa-solid fa-user"></i>  Account<img id="headerProfile" class="header-profile"></div></a>
        <a href="https://wa.me/8801319992654" target="_blank"><i class="fa-brands fa-whatsapp"></i> Message</a>
-        <a href="#"><i class="fa-solid fa-video"></i> Video</a>
+        <a href="video.html"><i class="fa-solid fa-video"></i> Video</a>
         <a href="login.html"><i class="fa-solid fa-user"></i> Sing in</a>
         <a href="#"><i class="fa-solid fa-gear"></i> Setting</a>
        
@@ -311,9 +311,9 @@ margin: auto;
 
 <div class="product" style="width:97%; border:px solid red; display: flex; flex-wrap: wrap; gap:5px;margin: auto; ">
   <a href="Updated product-details.html"><div class="card"><img src="vivo.png" width="165px" height="70%"><br><br> <span>vivo<br>price:10,000 Tk</span> </div></a>
-  <a href="profile.html"><div class="card"><img src="realme.png" width="165px" height="70%">
-    <br><br>
-    <span>vivo<br>price:10,000 Tk</span> </div></a>
+  <a href="profile.html">                <div class="card"><img src="realme.png" width="165px" height="70%"><br><br><span>readmi<br>price:12,000 Tk</span> </div></a>
+  <a href="profileproduct.html">         <div class="card"><img src="choclet2.png" width="165px" height="70%"><br><br><span>Nike<br>price:5000 Tk</span> </div></a>
+  <a href="profileproduct.html">         <div class="card"><img src="choclet2.png" width="165px" height="70%"><br><br><span>vivo<br>price:10,000 Tk</span> </div></a>
 </div>
 
 
