--- a/Updated product-details.html
+++ b/Updated product-details.html
@@ -78,7 +78,7 @@
         <img id="bigImage" src="vivo.png" width="100%"><br>
     <img src="realme.png" class="small" onclick="changeImage(this)">
     <img src="vivo.png" class="small" onclick="changeImage(this)">
-    <img src="choclet2.png" class="small"  onclick="changeImage(this)"><br>
+    <img src="gogle (2).png" class="small"  onclick="changeImage(this)"><br>
     <span style="margin-left:15px;font-size:20px; font-weight:800;">Vivo</span><br>
     <span style="margin-left:15px;font-size:18px; font-weight:700;">Price: 1500 Tk</span><br><br>
     <a href="https://wa.me/8801319992654" target="_blank"><button class="btn-1">order now</button></a><br>
