--- a/myproduct4.html
+++ b/myproduct4.html
@@ -75,12 +75,12 @@
     <a href="index.html"><button class="back">← Back</button></a><br><br>
 
     <div class="fullbox">
-        <img id="bigImage" src="vivo.png" width="100%"><br>
-    <img src="realme.png" class="small" onclick="changeImage(this)">
-    <img src="vivo.png" class="small" onclick="changeImage(this)">
-    <img src="gogle.png" class="small"  onclick="changeImage(this)"><br>
+        <img id="bigImage" src="Nike4.png" width="100%"><br>
+    <img src="Nike2.png" class="small" onclick="changeImage(this)">
+    <img src="Nike3.png" class="small" onclick="changeImage(this)">
+    <img src="nike.png" class="small"  onclick="changeImage(this)"><br>
     <span style="margin-left:15px;font-size:20px; font-weight:800;">Vivo</span><br>
-    <span style="margin-left:15px;font-size:18px; font-weight:700;">Price: 1500 Tk</span><br><br>
+    <span style="margin-left:15px;font-size:18px; font-weight:700;">Price: 2500 Tk</span><br><br>
     <a href="https://wa.me/8801319992654" target="_blank"><button class="btn-1">order now</button></a><br>
 
     
@@ -92,15 +92,15 @@
 
     <!-- TAB CONTENTS -->
     <div id="details" class="content-box" style="display:block;">
-        ✔ Brand: Vivo <br>
-        ✔ Battery Backup: 5000mAh <br>
-        ✔ Camera: 48MP <br>
+        ✔ Brand: Nike <br>
+        ✔ Size:38 | 40 | 42<br>
+        ✔ Color: white <br>
         ✔ Warranty: 1 Year <br>
     </div>
 
     <div id="description" class="content-box">
-        This is a high-quality Vivo product.  
-        Smooth performance, long battery life, and stylish design.
+        This is a high-quality Shoes product.  
+        Smooth performance, long time us, and stylish design.
     </div>
     </div>
 
