--- a/product-details.html
+++ b/product-details.html
@@ -74,7 +74,7 @@ h2 {
 <body>
 
 <div class="product-detail">
-    <a href="index.html"><button style="background:black;color:white; font-size:25px; "> ← </button></a>
+    <a href="index.html"><button class="back">← Back</button></a><br><br>
     <br><br>
     
     <img id="pImg" src="" alt="Main Product Image">
