--- a/profileproduct.html
+++ b/profileproduct.html
@@ -79,7 +79,7 @@
     <img src="choclet1.png" class="small" onclick="changeImage(this)">
     <img src="choclet3.png" class="small" onclick="changeImage(this)">
     <img src="choclet.png" class="small"  onclick="changeImage(this)"><br>
-    <span style="margin-left:15px;font-size:20px; font-weight:800;">Vivo</span><br>
+    <span style="margin-left:15px;font-size:20px; font-weight:800;">Nike</span><br>
     <span style="margin-left:15px;font-size:18px; font-weight:700;">Price: 1500 Tk</span><br><br>
     <a href="https://wa.me/8801319992654" target="_blank"><button class="btn-1">order now</button></a><br>
 
@@ -92,15 +92,15 @@
 
     <!-- TAB CONTENTS -->
     <div id="details" class="content-box" style="display:block;">
-        ✔ Brand: Vivo <br>
-        ✔ Battery Backup: 5000mAh <br>
-        ✔ Camera: 48MP <br>
+        ✔ Brand: Nike <br>
+        ✔ Color: Choclet <br>
+        ✔ Size: 38 | 40 | 42 <br>
         ✔ Warranty: 1 Year <br>
     </div>
 
     <div id="description" class="content-box">
-        This is a high-quality Vivo product.  
-        Smooth performance, long battery life, and stylish design.
+        This is a high-quality Shoes product.  
+        Smooth performance, long shol , and stylish design.
     </div>
     </div>
 
