--- a/testy.html
+++ b/testy.html
@@ -218,7 +218,7 @@ display:flex; flex-wrap:wrap;  border:px solid red;
 /* Large PC */
 @media (min-width: 901px) {
     .product-card {
-        width: 30%;
+        width:180px;
     }
     .header {
         max-width: 100%;
@@ -233,14 +233,14 @@ display:flex; flex-wrap:wrap;  border:px solid red;
 .product-card{
     position: relative;
 }
-.back{
+ .back{
     width:80px;height:30px;
-    border:1px solid black;background-color: #888;
+    border:1px solid rgb(175, 229, 217);background-color:rgb(249, 245, 245);
 }
 </style>
 </head>
 <body>
-    <a href="index.html"><button class="back">← Back</button> </a>
+    <a href="index.html"><button class="back">← Back</button></a><br><br>
 <div class="header" style="margin: auto; max-width:300px; border:px solid red;">
 
 <div class="profileone" style="position:relative;">
