--- a/video.html
+++ b/video.html
@@ -52,13 +52,13 @@
 
         .video-card{
             border:1px solid rgb(224,224,224);
-            padding:10px;
+            padding:0px;
             margin-bottom:15px;
         }
 
         iframe{
             width:100%;
-            height:250px;
+            height:280px;
             border:none;
             border-radius:8px;
         }
@@ -79,7 +79,7 @@
     <!-- Header Menu -->
     <div class="header">
         <div class="head"><a href="#video">Video</a></div>
-        <div class="head"><a href="#live">Live</a></div>
+        <div class="head"><a href="#live">Live  🔴 </a></div>
     </div>
 
     <!-- Video Section -->
@@ -87,17 +87,21 @@
         <h2>Videos</h2>
 
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/3DcXlJvTluM?si=A5IxWrAS2ynCBNii"allowfullscreen></iframe>
-            <p>Sample Video 1</p>
+            <iframe src="https://www.youtube.com/embed/AOdbwoELdJQ?si=PqRnnFt9s5qM1uFz"allowfullscreen></iframe>
+            <p> Video 1</p>
         </div>
         <div class="video-card">
             <iframe src="https://www.youtube.com/embed/SxS46Qn7ysY?si=jLjFASmw8YIdn4Sa" allowfullscreen></iframe>
-            <p>Sample Video 2</p>
+            <p> Video 2</p>
         </div>
 
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/E7wJTI-1dvQ" allowfullscreen></iframe>
-            <p>Sample Video 3</p>
+            <iframe src="https://www.youtube.com/embed/kvymoFdjuHw?si=G_YSjsBiS-xlrgyP" allowfullscreen></iframe>
+            <p> Video 3</p>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/bUxd3jqCr94?si=RJ6cSfva7L7xRxzR" allowfullscreen></iframe>
+            <p> Video 4</p>
         </div>
     </div>
 
@@ -106,8 +110,16 @@
         <h2>Live Stream</h2>
 
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/live_stream?channel=YOUR_CHANNEL_ID" allowfullscreen></iframe>
-            <p>Live Stream Example</p>
+            <iframe src="https://www.youtube.com/embed/MiQe9ob9aDc?si=5K03Di0XRcyZsfvw" allowfullscreen></iframe>
+            <p> 🔴 Live</p>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/Z0P2mDdtIws?si=0Xci402KHV-69IwU" allowfullscreen></iframe>
+            <p> 🔴 Live </p>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/cg_ev1tLo1Y?si=LWEwAvn0ZR6rLRd5" allowfullscreen></iframe>
+            <p> 🔴  Live </p>
         </div>
     </div>
 
