--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ margin: auto;
 
   <!-- HEADER -->
   <div class="header">
-     <span style=""><img src="logo.png" class="logo"> </span> 
+     <span ><img src="logo.png" class="logo"> </span> 
       <input type="text" id="searchBox" placeholder="Search..." onkeyup="searchProduct()">
 
       
