--- a/profileproduct.html
+++ b/profileproduct.html
@@ -80,7 +80,7 @@
     <img src="choclet3.png" class="small" onclick="changeImage(this)">
     <img src="choclet.png" class="small"  onclick="changeImage(this)"><br>
     <span style="margin-left:15px;font-size:20px; font-weight:800;">Nike</span><br>
-    <span style="margin-left:15px;font-size:18px; font-weight:700;">Price: 1500 Tk</span><br><br>
+    <span style="margin-left:15px;font-size:20px; font-weight:700; color:tomato;">Price: 1500 Tk</span><br><br>
     <a href="https://wa.me/8801319992654" target="_blank"><button class="btn-1">order now</button></a><br>
 
     
@@ -96,11 +96,23 @@
         ✔ Color: Choclet <br>
         ✔ Size: 38 | 40 | 42 <br>
         ✔ Warranty: 1 Year <br>
+        <hr>
+        <div class="payment" style="margin: auto; width:280px;border:px solid red;">
+            <img src="Bikash.png" width="90px" height="50px">
+            <img src="Nagod.png" width="90px" height="50px">
+            <img src="Rocket.png" width="90px" height="50px">
+        </div>
     </div>
 
     <div id="description" class="content-box">
         This is a high-quality Shoes product.  
         Smooth performance, long shol , and stylish design.
+        <hr>
+        <div class="payment" style="margin: auto; width:280px;border:px solid red;">
+            <img src="Bikash.png" width="90px" height="50px">
+            <img src="Nagod.png" width="90px" height="50px">
+            <img src="Rocket.png" width="90px" height="50px">
+        </div>
     </div>
     </div>
 
