--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ margin: auto;
 }
 .logo{
   background-color: rgb(187, 85, 17);
-  width:80px;
+  width:50px;
   height:40px;
   border:px solid tomato;
   border-radius:10%;
@@ -258,7 +258,7 @@ margin: auto;
 
   <!-- HEADER -->
   <div class="header">
-     <span ><img src="logo.png" class="logo"> </span> 
+     <span ><img src="WhatsApp Image 2025-12-09 at 15.22.30.jpeg" class="logo"> </span> 
       <input type="text" id="searchBox" placeholder="Search..." onkeyup="searchProduct()">
 
       
@@ -267,7 +267,7 @@ margin: auto;
       </button>
 
       <nav id="mainMenu" class="menu">
-        <a href="index.html"><div class="soman1" style="display:flex; justify-content: center;"><p class="names" style=""><img src="logo.png" class="logo"> </p> </div></a>
+        <a href="index.html"><div class="soman1" style="display:flex; justify-content: center;"><p class="names" style=""><img src="WhatsApp Image 2025-12-09 at 15.22.30.jpeg" class="logo"> </p> </div></a>
 
         <a href="testy.html">
     <div class="soman" style="display: flex; align-items:center;">
