--- a/video.html
+++ b/video.html
@@ -80,6 +80,7 @@
     <div class="header">
         <div class="head"><a href="#video">Video</a></div>
         <div class="head"><a href="#live">Live  🔴 </a></div>
+        <div class="head"><a href="#liveNews">Live News 🔴 </a></div>
     </div>
 
     <!-- Video Section -->
@@ -107,21 +108,49 @@
 
     <!-- Live Section -->
     <div class="video-box" id="live">
-        <h2>Live Stream</h2>
+        <h2>Live </h2>
 
         <div class="video-card">
             <iframe src="https://www.youtube.com/embed/MiQe9ob9aDc?si=5K03Di0XRcyZsfvw" allowfullscreen></iframe>
             <p> 🔴 Live</p>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/Z0P2mDdtIws?si=0Xci402KHV-69IwU" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/QGvjAPzImR8?si=Bz337XAQ1p3MXQIC" allowfullscreen></iframe>
             <p> 🔴 Live </p>
         </div>
         <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/cg_ev1tLo1Y?si=LWEwAvn0ZR6rLRd5" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/FqQJmDiW0xs?si=QDCF8CR9IEwQIGNJ" allowfullscreen></iframe>
             <p> 🔴  Live </p>
         </div>
     </div>
+<!-- Live News Section -->
+    <div class="video-box" id="liveNews">
+        <h2>Live News</h2>
+
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/pGzbQE1mr3o?si=LRLJiZV8ocGPN6sM" allowfullscreen></iframe>
+            <p> 🔴 Live  News </p>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/lV_SkRHLT5s?si=MxtqBwphA_SDrH7Z" allowfullscreen></iframe>
+            <p> 🔴 Live News </p>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/cg_ev1tLo1Y?si=LWEwAvn0ZR6rLRd5" allowfullscreen></iframe>
+            <p> 🔴  Live News </p>
+        </div>
+        <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/LF5CBt5Bibk?si=vSLB17svPbEfK_YW" allowfullscreen></iframe>
+            <p> 🔴  Live News </p>
+        </div>
+
+
+    </div>
+
+
+
+
+
 
 </body>
 </html>
