--- a/index.html
+++ b/index.html
@@ -325,9 +325,13 @@ margin: auto;
 
 <div class="product" style="width:97%; border:px solid red; display: flex; flex-wrap: wrap; gap:5px;margin: auto; ">
   <a href="Updated product-details.html"><div class="card"><img src="vivo.png" width="165px" height="70%"><br><br>   <span class="so">Vivo <br><span class="st">price:12,000 Tk</span> </span> </div></a>
-  <a href="profile.html">                <div class="card"><img src="realme.png" width="165px" height="70%"><br><br> <span class="so"> Readmi <br><span class="st">price:12,000 Tk</span> </span> </div></a>
-  <a href="profileproduct.html">         <div class="card"><img src="choclet2.png" width="165px" height="70%"><br><br><span class="so">Nike<br></span> <span class="st">price:12,000 Tk</span></div></a>
-  <a href="myproduct4.html">         <div class="card"><img src="Nike4.png" width="165px" height="70%"><br><br><span class="so"> Nike 4c<br></span> <span class="st">price:12,000 Tk</span></div></a>
+  <a href="profile.html">                <div class="card"><img src="realme.png" width="165px" height="70%"><br><br> <span class="so"> Readmi <br><span class="st">price:15,000 Tk</span> </span> </div></a>
+  <a href="profileproduct.html">         <div class="card"><img src="choclet2.png" width="165px" height="70%"><br><br><span class="so">Nike<br></span> <span class="st">price:2,000 Tk</span></div></a>
+  <a href="myproduct4.html">         <div class="card"><img src="Nike4.png" width="165px" height="70%"><br><br><span class="so"> Nike 4c<br></span> <span class="st">price:2,000 Tk</span></div></a>
+  <a href="myproduct5.html">         <div class="card"><img src="Full2.png" width="165px" height="70%"><br><br><span class="so">Sweatshirts <br></span>  <span class="st">price:700 Tk</span></div></a>
+  <a href="myproduct6.html">         <div class="card"><img src="baby shoes2.jpg" width="165px" height="70%"><br><br><span class="so">Baby Shoes <br></span>  <span class="st">price:1000 Tk</span></div></a>
+  <a href="myproduct7.html">         <div class="card"><img src="Hop3.png" width="165px" height="70%"><br><br><span class="so">ti Shart <br></span>  <span class="st">price:700 Tk</span></div></a>
+  <a href="myproduct8.html">         <div class="card"><img src="ofwhate.png" width="165px" height="70%"><br><br><span class="so">Shart <br></span>  <span class="st">price:500 Tk</span></div></a>
 </div>
 
 
