--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ margin: auto;
 
 
 
-@media (max-width: 480px) {
+@media (max-width: 480px){
   
   .header {
       height:60px;
@@ -193,10 +193,9 @@ margin: auto;
       width:100%;
       height:250px;
   }
-   
-}
-
-@media (min-width: 480px) and (max-width: 991px) {
+  
+  }
+@media  (max-width: 991px) {
   
   .header {
       height:70px;
@@ -224,10 +223,9 @@ margin: auto;
   #productList div {
       height:260px;
   }
-  .card{
-  width:170px;
-  height:220px;border:1px solid rgb(202, 195, 195); border:5px solid red;
-}
+  
+ 
+
 }
 .smallimg{
   width:30px;
@@ -241,9 +239,9 @@ margin: auto;
   border:px solid tomato;
   border-radius:10%;
 }
-.card{
-  width:170px;
-  height:220px;border:1px solid rgb(202, 195, 195); 
+.card2{
+ width:172px;
+ border:1px solid rgb(202, 195, 195); height:250px;
 }
 .so{
   padding-left:7px; font-size:18px;
@@ -324,14 +322,14 @@ margin: auto;
 
 
 <div class="product" style="width:97%; border:px solid red; display: flex; flex-wrap: wrap; gap:5px;margin: auto; ">
-  <a href="Updated product-details.html"><div class="card"><img src="vivo.png" width="165px" height="70%"><br><br>   <span class="so">Vivo <br><span class="st">price:12,000 Tk</span> </span> </div></a>
-  <a href="profile.html">                <div class="card"><img src="realme.png" width="165px" height="70%"><br><br> <span class="so"> Readmi <br><span class="st">price:15,000 Tk</span> </span> </div></a>
-  <a href="profileproduct.html">         <div class="card"><img src="choclet2.png" width="165px" height="70%"><br><br><span class="so">Nike<br></span> <span class="st">price:2,000 Tk</span></div></a>
-  <a href="myproduct4.html">         <div class="card"><img src="Nike4.png" width="165px" height="70%"><br><br><span class="so"> Nike 4c<br></span> <span class="st">price:2,000 Tk</span></div></a>
-  <a href="myproduct5.html">         <div class="card"><img src="Full2.png" width="165px" height="70%"><br><br><span class="so">Sweatshirts <br></span>  <span class="st">price:700 Tk</span></div></a>
-  <a href="myproduct6.html">         <div class="card"><img src="baby shoes2.jpg" width="165px" height="70%"><br><br><span class="so">Baby Shoes <br></span>  <span class="st">price:1000 Tk</span></div></a>
-  <a href="myproduct7.html">         <div class="card"><img src="Hop3.png" width="165px" height="70%"><br><br><span class="so">ti Shart <br></span>  <span class="st">price:700 Tk</span></div></a>
-  <a href="myproduct8.html">         <div class="card"><img src="ofwhate.png" width="165px" height="70%"><br><br><span class="so">Shart <br></span>  <span class="st">price:500 Tk</span></div></a>
+  <a href="Updated product-details.html"><div class="card2"><img src="vivo.png" width="165px" height="70%"><br><br>   <span class="so">Vivo <br><span class="st">price:12,000 Tk</span> </span> </div></a>
+  <a href="profile.html">                <div class="card2"><img src="realme.png" width="165px" height="70%"><br><br> <span class="so"> Readmi <br><span class="st">price:15,000 Tk</span> </span> </div></a>
+  <a href="profileproduct.html">         <div class="card2"><img src="choclet2.png" width="165px" height="70%"><br><br><span class="so">Nike<br></span> <span class="st">price:2,000 Tk</span></div></a>
+  <a href="myproduct4.html">             <div class="card2"><img src="Nike4.png" width="165px" height="70%"><br><br><span class="so"> Nike 4c<br></span> <span class="st">price:2,000 Tk</span></div></a>
+  <a href="myproduct5.html">             <div class="card2"><img src="Full2.png" width="165px" height="70%"><br><br><span class="so">Sweatshirts <br></span>  <span class="st">price:700 Tk</span></div></a>
+  <a href="myproduct6.html">             <div class="card2"><img src="baby shoes2.jpg" width="165px" height="70%"><br><br><span class="so">Baby Shoes <br></span>  <span class="st">price:1000 Tk</span></div></a>
+  <a href="myproduct7.html">             <div class="card2"><img src="Hop3.png" width="165px" height="70%"><br><br><span class="so">ti Shart <br></span>  <span class="st">price:700 Tk</span></div></a>
+  <a href="myproduct8.html">             <div class="card2"><img src="ofwhate.png" width="165px" height="70%"><br><br><span class="so">Shart <br></span>  <span class="st">price:500 Tk</span></div></a>
 </div>
 
 
@@ -381,7 +379,7 @@ function loadProducts() {
     products.forEach((p, index) => {
         productBox.innerHTML += `
         <a href="product-details.html" onclick="selectProduct(${index})">
-            <div class="card" style="width:170px; height:260px; border:1px solid #ddd;">
+            <div class="card" style="max-width:200px; height:260px; border:1px solid #ddd;">
                 <img src="${p.main}" width="168px" height="180px">
                 <span><br>${p.name}<br>Price: ${p.price} Tk</span>
             </div>
