--- a/product-details.html
+++ b/product-details.html
@@ -83,7 +83,7 @@ h2 {
 
     <h1 id="pName"></h1>
     <p id="pPrice"></p>
-    
+    <h3>color:</h3><h4>Size:</h4>
     <a href="https://wa.me/8801319992654" target="_blank"><button style="background:tomato;color:white;width:100%;height:50px;font-size:18px;margin:20px 0;">
         Order Now
     </button></a>
